--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-navbar></app-navbar>
-<h1>hello</h1>
+<!-- <app-slider></app-slider> -->
+<img src="../assets/image/planet.jpg" style="width:100%; height: 50%;">
